--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #7fad39;
+	background: #6575c7;
 	content: "";
 	margin: 0 auto;
 }
@@ -164,7 +164,7 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: #6575c7;
 	letter-spacing: 2px;
 }
 
@@ -175,7 +175,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: #6575c7;
 	border: none;
 }
 
@@ -446,7 +446,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -457,7 +457,7 @@ ol {
 }
 
 .header__menu ul li.active a {
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -467,7 +467,7 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .header__menu ul li:last-child {
@@ -521,7 +521,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #7fad39;
+	background: #6575c7;
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -584,7 +584,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: #6575c7;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -698,7 +698,7 @@ ol {
 
 .hero__search__phone__icon {
 	font-size: 18px;
-	color: #7fad39;
+	color: #6575c7;
 	height: 50px;
 	width: 50px;
 	background: #f5f5f5;
@@ -736,7 +736,7 @@ ol {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 4px;
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .hero__text h2 {
@@ -838,7 +838,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #7fad39;
+	background: #6575c7;
 	content: "";
 	opacity: 0;
 }
@@ -886,8 +886,8 @@ ol {
 }
 
 .featured__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #6575c7;
+	border-color: #6575c7;
 }
 
 .featured__item__pic__hover li:hover a i {
@@ -1322,8 +1322,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #6575c7;
+	border-color: #6575c7;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1521,7 +1521,7 @@ ol {
 }
 
 .filter__option span:hover {
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .product__item {
@@ -1562,8 +1562,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #6575c7;
+	border-color: #6575c7;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1643,8 +1643,8 @@ ol {
 
 .product__pagination a:hover,
 .blog__pagination a:hover {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #6575c7;
+	border-color: #6575c7;
 	color: #ffffff;
 }
 
@@ -2153,8 +2153,8 @@ ol {
 }
 
 .checkout__input__checkbox label input:checked~.checkmark {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #6575c7;
+	border-color: #6575c7;
 }
 
 .checkout__input__checkbox label input:checked~.checkmark:after {
@@ -2381,7 +2381,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .blog__sidebar__search {
@@ -2601,7 +2601,7 @@ ol {
 }
 
 .blog__details__widget .blog__details__social a:hover {
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .blog__details__widget .blog__details__social a:last-child {
@@ -2719,7 +2719,7 @@ ol {
 }
 
 .footer__widget .footer__widget__social a:hover {
-	background: #7fad39;
+	background: #6575c7;
 	color: #ffffff;
 	border-color: #ffffff;
 }
@@ -2757,7 +2757,7 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #7fad39;
+	color: #6575c7;
 }
 
 .contact__widget h4 {
@@ -2796,7 +2796,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #7fad39;
+	color: #6575c7;
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
@@ -3053,7 +3053,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #6575c7;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3119,7 +3119,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #6575c7;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3311,7 +3311,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #6575c7;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3377,7 +3377,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #6575c7;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
